--- a/tests-integration/test-server/Cargo.toml
+++ b/tests-integration/test-server/Cargo.toml
@@ -11,6 +11,9 @@ pgwire = { path = "../../" }
 async-trait = "0.1"
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
-tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "tls12"]}
+tokio-rustls = { version = "0.26.2", default-features = false, features = [
+  "logging",
+  "tls12",
+] }
 rustls-pemfile = "2.0"
 rustls-pki-types = "1.0"
