--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,7 +111,7 @@ tokio = { version = "1.19", features = [
 rustls-pki-types = { version = "1.10" }
 rusqlite = { version = "0.37.0", features = ["column_decltype"] }
 ## for duckdb example
-duckdb = { version = ">=1.3.0, <1.4" }
+duckdb = { version = "~1.3" }
 arrow-pg = "0.4.1"
 
 ## for loading custom cert files
