--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,14 +19,17 @@ bytes = "1.1.0"
 thiserror = "2"
 ## api
 tokio = { version = "1.19", features = [
-    "net",
-    "rt",
-    "io-util",
-    "macros",
-    "time"
+  "net",
+  "rt",
+  "io-util",
+  "macros",
+  "time",
 ], optional = true }
 tokio-util = { version = "0.7.3", features = ["codec", "io"], optional = true }
-tokio-rustls = { version = "0.26.2", optional = true, default-features = false, features = ["logging", "tls12"]}
+tokio-rustls = { version = "0.26.2", optional = true, default-features = false, features = [
+  "logging",
+  "tls12",
+] }
 rustls-pki-types = { version = "1.10", optional = true }
 futures = { version = "0.3", optional = true }
 async-trait = { version = "0.1", optional = true }
@@ -42,12 +45,12 @@ stringprep = { version = "0.1.2", optional = true }
 x509-certificate = { version = "0.25", optional = true }
 ## types
 postgres-types = { version = "0.2", features = [
-    "with-chrono-0_4",
-    "array-impls",
+  "with-chrono-0_4",
+  "array-impls",
 ], optional = true }
 chrono = { version = "0.4", features = ["std"], optional = true }
 rust_decimal = { version = "1.35", features = ["db-postgres"], optional = true }
-lazy-regex = {version = "3.3", default-features = false, features = ["lite"]}
+lazy-regex = { version = "3.3", default-features = false, features = ["lite"] }
 ## config
 percent-encoding = { version = "2.0", optional = true }
 
@@ -67,19 +70,19 @@ _aws-lc-rs = [
   "dep:rustls-pki-types",
   "dep:base64",
   "dep:stringprep",
-  "dep:x509-certificate"
+  "dep:x509-certificate",
 ]
 server-api = [
-    "dep:tokio",
-    "dep:tokio-util",
-    "dep:futures",
-    "dep:async-trait",
-    "dep:rand",
-    "dep:md5",
-    "dep:hex",
-    "dep:postgres-types",
-    "dep:chrono",
-    "dep:rust_decimal",
+  "dep:tokio",
+  "dep:tokio-util",
+  "dep:futures",
+  "dep:async-trait",
+  "dep:rand",
+  "dep:md5",
+  "dep:hex",
+  "dep:postgres-types",
+  "dep:chrono",
+  "dep:rust_decimal",
 ]
 server-api-ring = ["server-api", "_ring"]
 server-api-aws-lc-rs = ["server-api", "_aws-lc-rs"]
@@ -99,27 +102,34 @@ _sqlite = []
 _bundled = ["duckdb/bundled", "rusqlite/bundled"]
 
 [dev-dependencies]
-tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros", "time"]}
+tokio = { version = "1.19", features = [
+  "rt-multi-thread",
+  "net",
+  "macros",
+  "time",
+] }
 rustls-pki-types = { version = "1.10" }
 rusqlite = { version = "0.37.0", features = ["column_decltype"] }
 ## for duckdb example
-duckdb = { version = "1.0.0" }
+duckdb = { version = "~1.3" }
 arrow-pg = "0.4.1"
 
 ## for loading custom cert files
 rustls-pemfile = "2.0"
 ## webpki-roots has mozilla's set of roots
 ## rustls-native-certs loads roots from current system
-gluesql = { version = "0.17", default-features = false, features = ["gluesql_memory_storage"] }
+gluesql = { version = "0.17", default-features = false, features = [
+  "gluesql_memory_storage",
+] }
 
 [patch.crates-io]
 pgwire = { path = "." }
 
 [workspace]
 members = [
-    ".",
-    "tests-integration/rust-client",
-    "tests-integration/test-server"
+  ".",
+  "tests-integration/rust-client",
+  "tests-integration/test-server",
 ]
 
 [[example]]
@@ -159,5 +169,5 @@ name = "transaction"
 required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
-  name = "client"
+name = "client"
 required-features = ["client-api"]
