--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,8 @@ lazy-regex = { version = "3.3", default-features = false, features = ["lite"] }
 percent-encoding = { version = "2.0", optional = true }
 
 [features]
-default = ["server-api-aws-lc-rs"]
+default = ["server-api-aws-lc-rs", "pg_ext_types"]
+pg_ext_types = ["pg_type_chrono", "pg_type_rust_decimal"]
 _ring = [
   "dep:ring",
   "tokio-rustls/ring",
@@ -81,8 +82,6 @@ server-api = [
   "dep:md5",
   "dep:hex",
   "dep:postgres-types",
-  "dep:chrono",
-  "dep:rust_decimal",
 ]
 server-api-ring = ["server-api", "_ring"]
 server-api-aws-lc-rs = ["server-api", "_aws-lc-rs"]
@@ -97,6 +96,8 @@ client-api = [
 ]
 client-api-ring = ["client-api", "_ring", "dep:rustls-pki-types"]
 client-api-aws-lc-rs = ["client-api", "_aws-lc-rs", "dep:rustls-pki-types"]
+pg_type_chrono = ["dep:chrono"]
+pg_type_rust_decimal = ["dep:rust_decimal"]
 _sqlite = []
 _bundled = ["rusqlite/bundled"]
 
