--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,8 +54,8 @@ lazy-regex = { version = "3.3", default-features = false, features = ["lite"] }
 percent-encoding = { version = "2.0", optional = true }
 
 [features]
-default = ["server-api-aws-lc-rs", "pg_ext_types"]
-pg_ext_types = ["pg_type_chrono", "pg_type_rust_decimal", "pg_type_serde_json"]
+default = ["server-api-aws-lc-rs", "pg-ext-types"]
+pg-ext-types = ["pg-type-chrono", "pg-type-rust-decimal", "pg-type-serde-json"]
 _ring = [
   "dep:ring",
   "tokio-rustls/ring",
@@ -95,9 +95,9 @@ client-api = [
 ]
 client-api-ring = ["client-api", "_ring", "dep:rustls-pki-types"]
 client-api-aws-lc-rs = ["client-api", "_aws-lc-rs", "dep:rustls-pki-types"]
-pg_type_chrono = ["dep:chrono", "postgres-types/with-chrono-0_4"]
-pg_type_rust_decimal = ["dep:rust_decimal"]
-pg_type_serde_json = ["dep:serde", "dep:serde_json", "postgres-types/with-serde_json-1"]
+pg-type-chrono = ["dep:chrono", "postgres-types/with-chrono-0_4"]
+pg-type-rust-decimal = ["dep:rust_decimal"]
+pg-type-serde-json = ["dep:serde", "dep:serde_json", "postgres-types/with-serde_json-1"]
 _sqlite = []
 _bundled = ["rusqlite/bundled"]
 
