--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ lazy-regex = { version = "3.3", default-features = false, features = ["lite"] }
 ryu = "1"
 ## config
 percent-encoding = { version = "2.0", optional = true }
+jsonwebtoken = { version = "10", features = ["aws_lc_rs"], optional = true }
 
 [features]
 default = ["server-api-aws-lc-rs", "pg-ext-types"]
@@ -101,6 +102,7 @@ pg-type-rust-decimal = ["dep:rust_decimal"]
 pg-type-serde-json = ["dep:serde", "dep:serde_json", "postgres-types/with-serde_json-1"]
 _sqlite = []
 _bundled = ["rusqlite/bundled"]
+jwt-validator = ["dep:jsonwebtoken"]
 
 [dev-dependencies]
 chrono-tz = "0.10"
@@ -160,8 +162,12 @@ name = "scram"
 required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
-name = "transaction"
+name = "oauth"
 required-features = ["server-api-aws-lc-rs"]
+
+[[example]]
+name = "transaction"
+required-features = ["server-api-aws-lc-rs", "jwt-validator"]
 
 [[example]]
 name = "client"
