--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,7 @@ jobs:
     - uses: turtlequeue/setup-babashka@v1.5.0
       with:
         babashka-version: 1.1.173
+    - uses: jbangdev/setup-jbang@main
     - run: ./tests-integration/test.sh
 
   msrv:
