fix(shared): #298 fixed reordering and cargo example features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,10 +53,6 @@ lazy-regex = { version = "3.3", default-features = false, features = ["lite"] }
 ryu = "1"
 ## config
 percent-encoding = { version = "2.0", optional = true }
-## oauth
-jsonwebtoken = { version = "10", features = ["aws_lc_rs"], optional = true }
-rsa = { version = "0.9", optional = true }
-reqwest = { version = "0.12", features = ["json"], optional = true }
 
 [features]
 default = ["server-api-aws-lc-rs", "pg-ext-types"]
@@ -106,15 +102,6 @@ pg-type-rust-decimal = ["dep:rust_decimal"]
 pg-type-serde-json = ["dep:serde", "dep:serde_json", "postgres-types/with-serde_json-1"]
 _sqlite = []
 _bundled = ["rusqlite/bundled"]
-keycloak-oauth-validator = [
-"server-api",
-"dep:jsonwebtoken",
-"dep:rsa",
-"dep:reqwest",
-"dep:base64",
-"dep:serde",
-"dep:serde_json",
-]
 
 [dev-dependencies]
 chrono-tz = "0.10"
@@ -134,6 +121,11 @@ rustls-pemfile = "2.0"
 gluesql = { version = "0.18", default-features = false, features = [
   "gluesql_memory_storage",
 ] }
+
+## oauth
+jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
+rsa = { version = "0.9" }
+reqwest = { version = "0.12", features = ["json"] }
 
 [patch.crates-io]
 pgwire = { path = "." }
@@ -179,7 +171,7 @@ required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
 name = "keycloak_oauth"
-required-features = ["keycloak-oauth-validator"]
+required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
 name = "transaction"
